--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
-  "rnpm": { "assets": [ "App/assets/fonts" ] },
+  "rnpm": {
+    "assets": [
+      "App/assets/fonts"
+    ]
+  },
   "name": "Localiez",
   "version": "0.0.1",
   "private": true,
@@ -21,7 +25,8 @@
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
-    "react-native-vector-icons": "^7.1.0"
+    "react-native-vector-icons": "^7.1.0",
+    "react-native-video": "^5.1.0-alpha8"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
