--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -182,6 +182,10 @@ android {
 }
 
 dependencies {
+
+    implementation project(':react-native-video')
+    implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}" // 3 lines for video adding
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
