--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@apollo/client": "^3.3.6",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "apollo-client-preset": "^1.0.8",
+    "graphql": "^15.4.0",
+    "graphql-tag": "^2.11.0",
     "react": "16.13.1",
+    "react-apollo": "^3.1.5",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
