Working on Header and Calendar of Schedule page

--- a/App/Config/config.json
+++ b/App/Config/config.json
@@ -137,6 +137,12 @@
       "css": "search",
       "code": 59406,
       "src": "fontawesome"
+    },
+    {
+      "uid": "15ba51cbb4d05e6fb88f03a31a7c711c",
+      "css": "info-circled-alt",
+      "code": 61574,
+      "src": "mfglabs"
     }
   ]
 }
