--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react-apollo": "^3.1.5",
     "react-native": "0.63.4",
     "react-native-animated-loader": "^0.0.9",
+    "react-native-calendar-picker": "^7.0.8",
+    "react-native-calendars": "^1.1129.0",
+    "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-reanimated": "^1.13.2",
