--- a/package.json
+++ b/package.json
@@ -32,12 +32,15 @@
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-video": "^5.1.0-alpha8"
+    "react-native-video": "^5.1.0-alpha8",
+    "touch-cli": "^0.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@types/react": "^17.0.0",
+    "@types/react-native": "^0.63.45",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^7.1.0",
@@ -45,7 +48,9 @@
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.2.1",
-    "react-test-renderer": "16.13.1"
+    "react-native-typescript-transformer": "^1.2.13",
+    "react-test-renderer": "16.13.1",
+    "typescript": "^4.1.3"
   },
   "jest": {
     "preset": "react-native"
