Woked on Calendar and Schedule list

--- a/App/Config/config.json
+++ b/App/Config/config.json
@@ -143,6 +143,30 @@
       "css": "info-circled-alt",
       "code": 61574,
       "src": "mfglabs"
+    },
+    {
+      "uid": "8663320a860b00f26e94d3d15c9ba99a",
+      "css": "clock",
+      "code": 59407,
+      "src": "entypo"
+    },
+    {
+      "uid": "2d6150442079cbda7df64522dc24f482",
+      "css": "down-dir",
+      "code": 59408,
+      "src": "fontawesome"
+    },
+    {
+      "uid": "8704cd847a47b64265b8bb110c8b4d62",
+      "css": "down-open",
+      "code": 59409,
+      "src": "entypo"
+    },
+    {
+      "uid": "9c7ff134960bb5a82404e4aeaab366d9",
+      "css": "up-open",
+      "code": 59410,
+      "src": "entypo"
     }
   ]
 }
