--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "apollo-client-preset": "^1.0.8",
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
+    "react-moment": "^1.1.1",
     "react-native": "0.63.4",
     "react-native-animated-loader": "^0.0.9",
     "react-native-calendar-picker": "^7.0.8",
@@ -29,6 +31,7 @@
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-loading-spinner-overlay": "^2.0.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-overlay": "^0.5.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
@@ -57,23 +60,5 @@
     "react-test-renderer": "16.13.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
-  },
-  "jest": {
-    "preset": "react-native",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.(js)$": "<rootDir>/node_modules/babel-jest",
-      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
-    },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "testPathIgnorePatterns": [
-      "\\.snap$",
-      "<rootDir>/node_modules/"
-    ],
-    "cacheDirectory": ".jest/cache"
   }
 }
