--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@apollo/client": "^3.3.6",
     "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/datetimepicker": "^3.0.9",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
@@ -23,7 +24,6 @@
     "moment": "^2.29.1",
     "react": "16.13.1",
     "react-apollo": "^3.1.5",
-    "react-moment": "^1.1.1",
     "react-native": "0.63.4",
     "react-native-animated-loader": "^0.0.9",
     "react-native-calendar-picker": "^7.0.8",
@@ -32,7 +32,9 @@
     "react-native-gesture-handler": "^1.9.0",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal-datetime-picker": "^9.1.0",
     "react-native-overlay": "^0.5.0",
+    "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.16.1",
