--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-calendars": "^1.1129.0",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-hyperlink": "^0.0.19",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^9.1.0",
